# PaceLibReleaseTool

./: .gitmodules  CMakeLists.txt  README.md  make_release.sh
release/include/PaceLib/: PaceLib.h  Version.h
release/include/PaceLib/config/: Configuration.h
release/include/PaceLib/core/: Window.h
release/include/PaceLib/core/interfaces/: Drawable.h  Focusable.h  Hidable.h  State.h  Updateable.h
release/include/PaceLib/graphics/: Shape.h
release/include/PaceLib/graphics/conics/: Circle.h  Ellipse.h
release/include/PaceLib/graphics/effects/: ScrollingBackground.h  Sprite.h
release/include/PaceLib/graphics/gui/: Button.h  ButtonTex.h  CheckBox.h  Hotspot.h  Label.h  Props.h  Root.h  Tab.h  Tabber.h  Text.h  TextArea.h  TextInput.h  Texture.h  Tooltip.h  Widget.h
release/include/PaceLib/graphics/lines/: Line.h
release/include/PaceLib/graphics/polygons/: Hexagon.h  Pentagon.h  Polygon.h  Triangle.h
release/include/PaceLib/graphics/polygons/quads/: Rectangle.h
release/include/PaceLib/resources/: FontContainer.h  TexContainer.h
release/include/PaceLib/scene/: Map.h  Place.h  Scene.h
release/include/PaceLib/utils/: ConLog.h  DrawTypes.h  Random.h  Scale.h  Timer.h  sdlu.h
